--- a/package.json
+++ b/package.json
@@ -10,13 +10,16 @@
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
-    "next": "14.3.0-canary.59",
+    "bcryptjs": "^2.4.3",
+    "next": "^14.3.0-canary.59",
     "next-auth": "^5.0.0-beta.20",
     "react": "19.0.0-beta-4508873393-20240430",
     "react-dom": "19.0.0-beta-4508873393-20240430",
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.6",
+    "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
