Added Lint and Type checking using husky

--- a/.eslintrc.json
+++ b/.eslintrc.json
@@ -14,7 +14,6 @@
         "**/tools.js"
       ],
       "rules": {
-        "react-native/no-unused-styles": "error",
         "@typescript-eslint/no-shadow": "error",
         "react-hooks/exhaustive-deps": "error",
         "no-shadow": "off",
@@ -41,8 +40,8 @@
         ]
       },
       "env": {
-        "jest": true,
-        "jest/globals": true
+        "jest": true
+        // "jest/globals": true
       }
     }
   ]
