--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "zod": "^3.23.8"
   },
   "devDependencies": {
+    "@playwright/test": "^1.47.1",
     "@types/bcryptjs": "^2.4.6",
     "@types/next-auth": "^3.15.0",
     "@types/node": "^20",
@@ -29,7 +30,8 @@
     "eslint-config-next": "14.2.5",
     "eslint-plugin-simple-import-sort": "^12.1.1",
     "husky": "^9.1.6",
+    "playwright": "^1.47.1",
     "prisma": "^5.18.0",
-    "typescript": "^5"
+    "typescript": "^5.6.2"
   }
 }
